data/derived/comb/progs/unify/prog6084.ml.out
Characters 61-72:
  h + sumList(xs);;
      ^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
